--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -6,7 +6,7 @@
   background-size: cover;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../../img/bg-back-mobile@2x.jpg.jpg");
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
   }
 
   @media (min-width: @tablet) {
