--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -18,4 +18,15 @@
       align-items: center;
     }
   }
+
+  &_popup {
+    @media (min-width: @tablet) {
+      padding-right: 82px;
+      padding-left: 82px;
+    }
+
+    @media (min-width: @desktop) {
+      max-width: 400px;
+    }
+  }
 }
