--- a/source/less/style.less
+++ b/source/less/style.less
@@ -28,6 +28,7 @@
 @import "blocks/range";
 @import "blocks/study";
 @import "blocks/link";
+@import "blocks/popup";
 
 
 // @import "blocks/download";
