--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -100,6 +100,14 @@
 
     @media (min-width: @tablet) {
       max-width: 300px;
+      margin: 0 auto;
+    }
+  }
+
+  &_w100 {
+    @media (min-width: @desktop) {
+      max-width: none;
+      width: 100%;
     }
   }
 }
