--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -143,7 +143,7 @@
     }
   }
 
-  &_tablet {
+  &_main {
     display: none;
     width: 100%;
     min-height: 34px;
@@ -152,6 +152,11 @@
 
     @media (min-width: @tablet) {
       display: block;
+    }
+
+    @media (min-width: @desktop) {
+      margin-left: 48px;
+      padding-right: 30px;
     }
   }
 }
