--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -15,3 +15,9 @@
     background-image: url("../../img/bg-map-desktop@1x.jpg");
   }
 }
+
+.map > iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
