--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -104,15 +104,17 @@
 
   &_hit::before {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -2px;
+    left: -2px;
     width: 72px;
     height: 72px;
     content: "";
     background-image: url("../../img/bg-hit.svg");
+    background-repeat: no-repeat;
     background-size: cover;
 
     @media (min-width: @tablet) {
+      background-image: url("../../img/bg-hit-tablet.svg");
       top: -7px;
       left: -2px;
       width: 64px;
@@ -120,7 +122,7 @@
     }
 
     @media (min-width: @desktop) {
-      top: -1px;
+      top: -2px;
       left: -2px;
       width: 71px;
       height: 71px;
@@ -129,8 +131,8 @@
 
   &_hit::after {
     position: absolute;
-    top: 5px;
-    left: 4px;
+    top: 3px;
+    left: 1px;
     width: 72px;
     height: 72px;
     content: "Хит";
@@ -146,6 +148,11 @@
       left: -2px;
       width: 64px;
       height: 64px;
+    }
+
+    @media (min-width: @desktop) {
+      top: 1px;
+      left: 2px;
     }
   }
 
@@ -177,6 +184,7 @@
 .price__money {
   font-size: 24px;
   font-weight: 300;
+  display: block;
 
   @media (min-width: @tablet) {
     font-size: 18px;
