finished project. First test

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -332,7 +332,7 @@
     box-sizing: border-box;
     width: 39px;
     height: 39px;
-    content: '';
+    content: "";
     transition: @transition;
     border: 2px solid @color-silver-second;
     border-radius: 3px;
@@ -356,7 +356,7 @@
     left: 12px;
     width: 15px;
     height: 15px;
-    content: '';
+    content: "";
     transition: @transition;
     opacity: 0;
     border-radius: 50%;
@@ -385,7 +385,7 @@
   display: none;
   width: 59px;
   height: 59px;
-  content: '';
+  content: "";
   background-color: @color-silver-second;
 
   align-items: center;
