fix bugs, second try

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -33,12 +33,12 @@
     height: 320px;
     margin: 0 auto;
     content: "";
-    background-image: url("../../img/iphone-screen-mobile@1x.png");
+    background-image: url("../img/iphone-screen-mobile@1x.png");
     background-repeat: no-repeat;
     background-size: 157px 320px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../../img/iphone-screen-mobile@2x.png");
+      background-image: url("../img/iphone-screen-mobile@2x.png");
     }
 
     @media (min-width: @tablet) {
@@ -48,11 +48,11 @@
       height: 481px;
       margin: 0;
       margin-right: 40px;
-      background-image: url("../../img/iphone-screen-3-tablet@1x.png");
+      background-image: url("../img/iphone-screen-3-tablet@1x.png");
       background-size: 268px 481px;
 
       @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-        background-image: url("../../img/iphone-screen-3-tablet@2x.png");
+        background-image: url("../img/iphone-screen-3-tablet@2x.png");
       }
     }
 
@@ -108,30 +108,30 @@
 
   &_first::before {
     @media (min-width: @desktop) {
-      background-image: url("../../img/iphone-screen-1-desktop@1x.png");
+      background-image: url("../img/iphone-screen-1-desktop@1x.png");
 
       @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-        background-image: url("../../img/iphone-screen-1-desktop@2x.png");
+        background-image: url("../img/iphone-screen-1-desktop@2x.png");
       }
     }
   }
 
   &_second::before {
     @media (min-width: @desktop) {
-      background-image: url("../../img/iphone-screen-2-desktop@1x.png");
+      background-image: url("../img/iphone-screen-2-desktop@1x.png");
 
       @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-        background-image: url("../../img/iphone-screen-2-desktop@2x.png");
+        background-image: url("../img/iphone-screen-2-desktop@2x.png");
       }
     }
   }
 
   &_third::before {
     @media (min-width: @desktop) {
-      background-image: url("../../img/iphone-screen-3-desktop@1x.png");
+      background-image: url("../img/iphone-screen-3-desktop@1x.png");
 
       @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-        background-image: url("../../img/iphone-screen-3-desktop@2x.png");
+        background-image: url("../img/iphone-screen-3-desktop@2x.png");
       }
     }
   }
