--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -109,12 +109,12 @@
     width: 72px;
     height: 72px;
     content: "";
-    background-image: url("../../img/bg-hit.svg");
+    background-image: url("../img/bg-hit.svg");
     background-repeat: no-repeat;
     background-size: cover;
 
     @media (min-width: @tablet) {
-      background-image: url("../../img/bg-hit-tablet.svg");
+      background-image: url("../img/bg-hit-tablet.svg");
       top: -7px;
       left: -2px;
       width: 64px;
