--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -4,8 +4,8 @@
   font-style: normal;
   font-stretch: normal;
 
-  src: url("../../fonts/opensanslight.woff2") format("woff2"),
-    url("../../fonts/opensanslight.woff") format("woff");
+  src: url("../fonts/opensanslight.woff2") format("woff2"),
+    url("../fonts/opensanslight.woff") format("woff");
   font-display: swap;
 }
 
@@ -15,8 +15,8 @@
   font-style: normal;
   font-stretch: normal;
 
-  src: url("../../fonts/opensans.woff2") format("woff2"),
-    url("../../fonts/opensans.woff") format("woff");
+  src: url("../fonts/opensans.woff2") format("woff2"),
+    url("../fonts/opensans.woff") format("woff");
   font-display: swap;
 }
 
@@ -26,8 +26,8 @@
   font-style: normal;
   font-stretch: normal;
 
-  src: url("../../fonts/OpenSansSemiBold.woff2") format("woff2"),
-    url("../../fonts/OpenSansSemiBold.woff") format("woff");
+  src: url("../fonts/OpenSansSemiBold.woff2") format("woff2"),
+    url("../fonts/OpenSansSemiBold.woff") format("woff");
 }
 
 @font-face {
@@ -36,8 +36,8 @@
   font-style: normal;
   font-stretch: normal;
 
-  src: url("../../fonts/opensansbold.woff2") format("woff2"),
-    url("../../fonts/opensansbold.woff") format("woff");
+  src: url("../fonts/opensansbold.woff2") format("woff2"),
+    url("../fonts/opensansbold.woff") format("woff");
   font-display: swap;
 }
 
