--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -38,19 +38,19 @@
   }
 
   &__link--app-store {
-    background-image: url("../../img/logo-apple.svg");
+    background-image: url("../img/logo-apple.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
 
   &__link--android {
-    background-image: url("../../img/logo-android.svg");
+    background-image: url("../img/logo-android.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
 
   &__link--windows {
-    background-image: url("../../img/logo-microsoft.svg");
+    background-image: url("../img/logo-microsoft.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
